--- a/sass/base/_positioning.scss
+++ b/sass/base/_positioning.scss
@@ -1,3 +1,7 @@
+html{
+    width: 100vw;
+}
+
 //Global Variables
     $primary-border-radius: 8px;
     $icon-border-radius: 100%;
@@ -56,7 +60,19 @@
     $introduction-text-container-top-desktop: 300px;
     $introduction-text-container-left-desktop: 22%;
 
-    $introduction-text-container-top-mobile: 100px;
-    $introduction-text-container-left-mobile: 22%;
+    $introduction-text-container-top-mobile: 160px;
+    $introduction-text-container-left-mobile: 16%;
+
+    .navbar{
+	width: 100vw;
+    }
+
+    body{
+	width: 100vw;
+    }
+
+    html{
+	width: 100vw;
+    }
 
     
